--- a/prepros.config
+++ b/prepros.config
@@ -882,6 +882,7 @@
       {
         "file": "scss/_main.scss",
         "config": {
+          "autoCompile": true,
           "customOutput": "css\\style.css"
         }
       }
