--- a/prepros.config
+++ b/prepros.config
@@ -880,6 +880,18 @@
     },
     "files": [
       {
+        "file": "pug/pages/dota.pug",
+        "config": {
+          "customOutput": "dota.html"
+        }
+      },
+      {
+        "file": "pug/pages/index.pug",
+        "config": {
+          "customOutput": "index.html"
+        }
+      },
+      {
         "file": "scss/_main.scss",
         "config": {
           "autoCompile": true,
