--- a/prepros.config
+++ b/prepros.config
@@ -886,6 +886,18 @@
         }
       },
       {
+        "file": "pug/pages/fortnite.pug",
+        "config": {
+          "customOutput": "fortnite.html"
+        }
+      },
+      {
+        "file": "pug/pages/gta.pug",
+        "config": {
+          "customOutput": "gta.html"
+        }
+      },
+      {
         "file": "pug/pages/index.pug",
         "config": {
           "customOutput": "index.html"
